# logger

./: .gitignore  Makefile.am  README.md  configure.ac  logger.pc.in  makefile
logger/: formatter-internal.h  formatter.c  formatter.h  logger-internal.h  logger-level.h  logger.c  logger.h  logger.xml  loggerhandler-internal.h  loggerhandler.c  loggerhandler.h  makefile
tst/: logger-test.cc  logger_test.cc  makefile  unit-test
